// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DraftModeCallout Custom content case renders a callout with custom content when custom props are present 1`] = `
<div
  class="euiPanel euiPanel--warning euiCallOut euiCallOut--warning emotion-euiPanel-none-warning-euiCallOut-warning"
  data-size="m"
  data-test-subj="customDraftModeCallOut"
  style="--euiCallOutTypeColor: #966B03;"
>
  <div
    class="css-1slkmya-wrapper"
  >
    <div
      class="css-wlziyu-body"
    >
      <span
        aria-hidden="true"
        class="css-1cmanx3-icon-l-icon"
        color="#966B03"
        data-euiicon-type="warning"
      />
      <div
        class="css-ak2bmi-content"
      >
        <p
          class="euiTitle euiCallOutHeader__title emotion-euiTitle-xs-euiCallOutHeader"
        >
          You have unsaved changes
        </p>
        <div
          class="euiText euiCallOut__additionalContent emotion-euiText-s-euiTextColor-default"
          data-test-subj="customDraftModeCallOut__content"
        >
          <p
            class="euiText emotion-euiText-s"
          >
            Custom message
          </p>
        </div>
      </div>
    </div>
    <div
      aria-atomic="true"
      aria-live="polite"
      class="emotion-euiScreenReaderOnly"
      role="status"
    />
  </div>
</div>
`;

exports[`DraftModeCallout Default case renders a default callout when custom props are not present 1`] = `
<div
  class="euiPanel euiPanel--warning euiCallOut euiCallOut--warning emotion-euiPanel-none-warning-euiCallOut-warning"
  data-size="m"
  data-test-subj="unsavedChangesDraftModeCallOut"
  style="--euiCallOutTypeColor: #966B03;"
>
  <div
    class="css-1slkmya-wrapper"
  >
    <div
      class="css-wlziyu-body"
    >
      <span
        aria-hidden="true"
        class="css-1cmanx3-icon-l-icon"
        color="#966B03"
        data-euiicon-type="warning"
      />
      <div
        class="css-ak2bmi-content"
      >
        <p
          class="euiTitle euiCallOutHeader__title emotion-euiTitle-xs-euiCallOutHeader"
        >
          You have unsaved changes
        </p>
        <div
          class="euiText euiCallOut__additionalContent emotion-euiText-s-euiTextColor-default"
          data-test-subj="unsavedChangesDraftModeCallOut__content"
        >
          <p
            class="euiText emotion-euiText-s"
          >
            This link might not be permanent. Save your changes to ensure it works as expected.
          </p>
        </div>
      </div>
    </div>
    <div
      aria-atomic="true"
      aria-live="polite"
      class="emotion-euiScreenReaderOnly"
      role="status"
    />
  </div>
</div>
`;
